@@ -71,7 +71,7 @@ public class AdminUserViewController {
             Model model) {
 
         int safePage = Math.max(page, 0);
-        int safeSize = Math.clamp(size, 1, 100);
+        int safeSize = Math.min(100, Math.max(size, 1));
 
         Page<AdminUserResponse> users = adminUserService.findAll(role, isActive, keyword, safePage, safeSize);
         PaginationInfo pageInfo = PaginationUtils.calculate(users);
